2006-06-07  Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (install-info, install-dvi, install-ps, install-pdf):
	New dummy targets.

2005-05-23  Carlos O'Donell  <carlos@codesourcery.com>

	* Makefile.in: Add info dvi ps pdf html install-html to .PHONY
	Add install-html target.

2005-05-13  Nick Clifton  <nickc@redhat.com>

	* Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	Makefile.in, bindtextdom.c, dcgettext.c, dcigettext.c,
	dcngettext.c, dgettext.c, dngettext.c, eval-plural.h,
	explodename.c, finddomain.c, gettext.c, gettextP.h, gmo.h,
	hash-string.h, intl-compat.c, l10nflist.c, libgnuintl.h,
	loadinfo.h, loadmsgcat.c, localcharset.c, localcharset.h,
	locale.alias, localealias.c, localename.c, log.c, ngettext.c,
	osdep.c, plural-exp.c, plural-exp.h, plural.c, plural.y,
	relocatable.c, relocatable.h, textdomain.c

2004-11-24  Kelley Cook  <kcook@gcc.gnu.org>

	* aclocal.m4: Regenerate.

2004-09-23  Kelley Cook  <kcook@gcc.gnu.org>

	* Makefile.in (config.h.in): Correct dependencies.
	(stamp-h1): Likewise.
	(config.intl): Likewise.

2004-09-22  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.ac (AC_CONFIG_MACRO_DIR): New.
	(ACLOCAL, AUTOCONF, AUTOHEADER, MAINT): Substitute.
	* Makefile.in: Update with maintainer mode rules.
	* README: Update aclocal regeneration instructions.
	* aclocal.m4, configure: Regenerate.

2004-09-22  Kelley Cook  <kcook@gcc.gnu.org>

	* .cvsignore: Ignore autom4te.cache

2004-04-25  Paolo Bonzini  <bonzini@gnu.org>

        * configure.ac: Point config.intl to the parent directory of
        ${top_builddir}.
	* configure: Regenerate.

2004-03-10  Kelley Cook  <kcook@gcc.gnu.org>

	* configure.ac: Bump AC_PREREQ to 2.59.
	* configure: Regenerate.
	* config.h.in: Regenerate.

2004-02-29  Nathanael Nerode  <neroden@gcc.gnu.org>

	* configure.in: Convert to autoconf 2.57, gratuitous stylistic
	cleanup, rename to configure.ac.
	* configure.ac: Renamed from configure.in.